reader-ddot: parse with ddot-core instead of hand-rolling the grammar
DDotReader split on every `\s*\.\.\s*` with exact-arity checks, which is not
the ddot.it grammar. It had no exact dot-run counting (so `Wait... what`
became a triple), no line gate, it rejected any object containing `..`, it
recognised `!!off`/`!!on` only alone on a trimmed line so the host-comment
form never fired, it had no `;;` support, and it invented a `#` line-comment
rule the language does not have. It had never been run against the shared
corpus.

Parsing is now one call to DdotEventExporter.parse and a fold over the
events; 557 lines becomes 385. ddot-core can be depended on from inside this
reactor precisely because it has no dependencies of its own — reader-ddot ->
javalib -> base would have cycled.

Kept and re-expressed as a fold: the vocabulary layer (relation aliases,
label, prefix, has type, RDF literal markers, ddot.it/this) and the CJ
emission. That is collector work layered on the event stream, not parsing.

Exactly one test changed. Its input put metadata on the `!!block` opener
line, but an opener must end its physical line, so the object is now
literally "ddot.it/block"; the metadata moves to a continuation line. The
writer emitted two further shapes only the old lenient parser could read —
multiple `,,` payloads on one line, and metadata on an opener line — both now
written in forms that read back.

Deletes the private copy of corpus cases 01-12, which no code read and whose
expectations already differed from upstream in five cases. The new
conformance test reads the real corpus and asserts three things: the event
stream is byte-identical for all 35 cases, nothing errors above Warn, and
every event becomes exactly one CJ fact — so the importer is bound to the
corpus, not just the parser.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>